; ModuleID = '/home/carl/AnghaBench/robotjs/src/extr_bitmap_find.c_findAllBitmapInRect.c'
source_filename = "/home/carl/AnghaBench/robotjs/src/extr_bitmap_find.c_findAllBitmapInRect.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32 }

@MMPointZero = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @findAllBitmapInRect(%struct.TYPE_7__* %0, %struct.TYPE_7__* %1, i32 %2, float %3) #0 {
  %5 = alloca %struct.TYPE_7__*, align 8
  %6 = alloca %struct.TYPE_7__*, align 8
  %7 = alloca i32, align 4
  %8 = alloca float, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i64, align 8
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %5, align 8
  store %struct.TYPE_7__* %1, %struct.TYPE_7__** %6, align 8
  store i32 %2, i32* %7, align 4
  store float %3, float* %8, align 4
  %13 = call i32 @createMMPointArray(i32 0)
  store i32 %13, i32* %9, align 4
  %14 = load i32, i32* @MMPointZero, align 4
  store i32 %14, i32* %10, align 4
  %15 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %16 = call i32 @initBadShiftTable(i32* %11, %struct.TYPE_7__* %15)
  br label %17

17:                                               ; preds = %25, %4
  %18 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %19 = load %struct.TYPE_7__*, %struct.TYPE_7__** %6, align 8
  %20 = load i32, i32* %7, align 4
  %21 = load float, float* %8, align 4
  %22 = load i32, i32* %10, align 4
  %23 = call i64 @findBitmapInRectAt(%struct.TYPE_7__* %18, %struct.TYPE_7__* %19, i32* %10, i32 %20, float %21, i32 %22, i32* %11)
  %24 = icmp eq i64 %23, 0
  br i1 %24, label %25, label %41

25:                                               ; preds = %17
  %26 = load %struct.TYPE_7__*, %struct.TYPE_7__** %6, align 8
  %27 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  %29 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %30 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 4
  %32 = sub nsw i32 %28, %31
  %33 = add nsw i32 %32, 1
  %34 = sext i32 %33 to i64
  store i64 %34, i64* %12, align 8
  %35 = load i32, i32* %9, align 4
  %36 = load i32, i32* %10, align 4
  %37 = call i32 @MMPointArrayAppendPoint(i32 %35, i32 %36)
  %38 = load i32, i32* %10, align 4
  %39 = load i64, i64* %12, align 8
  %40 = call i32 @ITER_NEXT_POINT(i32 %38, i64 %39, i32 0)
  br label %17

41:                                               ; preds = %17
  %42 = call i32 @destroyBadShiftTable(i32* %11)
  %43 = load i32, i32* %9, align 4
  ret i32 %43
}

declare dso_local i32 @createMMPointArray(i32) #1

declare dso_local i32 @initBadShiftTable(i32*, %struct.TYPE_7__*) #1

declare dso_local i64 @findBitmapInRectAt(%struct.TYPE_7__*, %struct.TYPE_7__*, i32*, i32, float, i32, i32*) #1

declare dso_local i32 @MMPointArrayAppendPoint(i32, i32) #1

declare dso_local i32 @ITER_NEXT_POINT(i32, i64, i32) #1

declare dso_local i32 @destroyBadShiftTable(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
